--- a/kg-frontend/src/app/components/forgot-password/forgot-password.html
+++ b/kg-frontend/src/app/components/forgot-password/forgot-password.html
@@ -4,7 +4,9 @@
     <form #forgotForm="ngForm" (ngSubmit)="submitEmail()" novalidate>
         <input type="email" name="email" [(ngModel)]="email" placeholder="Enter your email" required #emailRef="ngModel"
             email />
+
         <div *ngIf="error" class="error">{{ error }}</div>
+        <div *ngIf="message" class="success">{{ message }}</div>
 
         <button type="submit" [disabled]="forgotForm.invalid">Send Reset Link</button>
     </form>
