--- a/kg-frontend/src/app/components/new-employee/new-employee.css
+++ b/kg-frontend/src/app/components/new-employee/new-employee.css
@@ -1,8 +1,7 @@
 .create-new-user {
     display: flex;
     justify-content: center;
-    margin: 20px;
-    font-family: Arial, sans-serif;
+    margin: 20px 0;
 }
 
 .form-card {
@@ -10,7 +9,6 @@
     border-radius: 8px;
     padding: 25px;
     width: 100%;
-    max-width: 1000px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -151,4 +149,22 @@ textarea {
 .save-btn:disabled {
     background: #bbb;
     cursor: not-allowed;
+}
+
+.back-all-employee-btn {
+    font-size: 20px;
+    background-color: #ac4410;
+    color: #fff;
+    padding: 8px 16px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.back-all-employee-btn:hover {
+    background-color: #762e0a;
+    transform: translateY(-2px);
 }
