--- a/kg-frontend/src/app/components/reset-password/reset-password.html
+++ b/kg-frontend/src/app/components/reset-password/reset-password.html
@@ -1,7 +1,31 @@
-<h2>Reset Password</h2>
-<form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
-    <label>New Password</label>
-    <input formControlName="password" type="password" />
-    <button type="submit">Reset Password</button>
-</form>
-<p>{{ message }}</p>
+<div class="reset-container">
+    <h2>Reset Password</h2>
+    <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
+
+        <div class="row">
+            <div class="col">
+                <label for="currentPassword">Current Password</label>
+                <input id="currentPassword" formControlName="currentPassword" type="password"
+                    placeholder="Enter current password" />
+            </div>
+
+            <div class="col">
+                <label for="newPassword">New Password</label>
+                <input id="newPassword" formControlName="newPassword" type="password"
+                    placeholder="Enter new password" />
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-full">
+                <label for="confirmPassword">Confirm Password</label>
+                <input id="confirmPassword" formControlName="confirmPassword" type="password"
+                    placeholder="Confirm new password" />
+            </div>
+        </div>
+
+        <button type="submit" [disabled]="resetForm.invalid">Reset Password</button>
+    </form>
+
+    <p class="message">{{ message }}</p>
+</div>
