--- a/kg-frontend/src/app/pages/dashboard/dashboard.css
+++ b/kg-frontend/src/app/pages/dashboard/dashboard.css
@@ -137,3 +137,20 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+.reset-password-btn {
+    margin-top: 10px;
+    background-color: #ac4410;
+    color: white;
+    border: none;
+    padding: 5px 8px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+}
+
+.reset-password-btn:hover {
+    background-color: #762e0a;
+}
